--- a/index.html
+++ b/index.html
@@ -1,36 +1,1 @@
-<html>
-<head>
-  <title>Canva 98</title>
-  <link rel="stylesheet" href="index.css">
-</head>
-<body>
-<div class="canvas"></div>
-<div class="taskbar">
-  <button class="taskbar__start">
-    <img src="img/canva.png"/>
-    <span>Start</span>
-  </button>
-  <div class="taskbar__apps"></div>
-  <div class="taskbar__tray emboss">
-    <img src="img/canva.png"/><span class="taskbar__clock"></span>
-  </div>
-</div>
-<div class="start bevel hidden">
-  <div class="start__brand">
-    <div class="start__brandText"><strong>Canva</strong>98</div>
-  </div>
-  <div class="start__menuList">
-    <a target="_blank" href="https://www.canva.com/"><img src="img/canva.png"/>Canva Update</a>
-    <div class="publish"><img src="img/world.png"/>Publish</div>
-    <hr/>
-    <div class="notepad"><img src="img/notepad.png"/>Notepad</div>
-    <div class="irfanview"><img src="img/irfanview.png"/>IrfanView</div>
-    <hr/>
-    <div class="logoff"><img src="img/key_win.png"/>Log Off Dave</div>
-    <div class="shutdown"><img src="img/computer.png"/>Shut Down</div>
-  </div>
-</div>
-<script src="lib/dom-to-image.min.js" type="application/javascript"></script>
-<script src="main.js" type="application/javascript"></script>
-</body>
-</html>
+<html><head> <title>Canva 98</title> <link rel="stylesheet" href="i.css"></head><body><div class="h"></div><div class="d"> <button class="f"> <img src="i/c.png"/> <span>Start</span> </button> <div class="g"></div><div class="e b"> <img src="i/c.png"/><span class="t"></span> </div></div><div class="n a c"> <div class="k"> <div class="l"><strong>Canva</strong>98</div></div><div class="m"> <a target="_blank" href="//canva.com"><img src="i/c.png"/>Canva Update</a> <div class="o"><img src="i/f.png"/>Publish</div><hr/> <div class="p"><img src="i/e.png"/>Notepad</div><div class="q"><img src="i/b.png"/>IrfanView</div><hr/> <div class="r"><img src="i/d.png"/>Log Off Dave</div><div class="s"><img src="i/a.png"/>Shut Down</div></div></div><script src="l/d.js"></script><script src="m.js"></script></body></html>
